--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" class="p-4 sm:p-6 md:p-8"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
