Fixed meta tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stormy Prods and Records</title>
     <meta name="description" content="Stormy Prods and Records" />
-    <meta name="author" content="Stormy" />
+    <meta name="author" content="Stormy Prods and Records" />
 
+     <!-- Open Graph -->
     <meta property="og:title" content="Stormy Prods and Records" />
     <meta property="og:description" content="Stormy Prods and Records Website" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://stormyprods.com.br/stormy-logo.png" />
+    <meta property="og:url" content="https://stormyprods.com.br" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stormy Prods and Records" />
+    <meta name="twitter:description" content="Stormy Prods and Records Website" />
+    <meta name="twitter:image" content="https://stormyprods.com.br/stormy-logo.png" />
   </head>
 
   <body>
